# vk_minimal_latest

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerSlangShader.cmake  FindSlang.cmake
src/: minimal_latest.cpp
